--- a/es2csv/Dockerfile
+++ b/es2csv/Dockerfile
@@ -1,6 +1,10 @@
 
-#docker run -v /home/you/Downloads:/root mattclemons/es2csv es2csv 
 FROM debian:latest
+
+MAINTAINER matt.clemons@gmail.com
+
 RUN apt-get -y update && apt-get install -y python-pip
+
 RUN pip install es2csv
+
 ADD . /root/
